--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,11 @@
     <div class="container">
       <form class="form">
         <input class="form-input" type="text" name="imageName" placeholder="Search images...">
-        <button class="form-btn" type="submit">Search</button>
+        <button class="btn form-btn" type="submit">Search</button>
       </form>
 
       <ul class="gallery"></ul>
+      <button class="btn load-more-btn is-hidden" type="button">Load more</button>
     </div>
   </main>
   <script type="module" src="./main.js"></script>
